# G4Patcher

./: Cargo.toml  README.md  build.rs  dist-workspace.toml
patches/: EVIV_HG.asm  EVIV_HG_SS.asm  EVIV_PLAT.asm
patches/HG_SS/: ButtonScript_HG_SS.asm  EVIV_HG_SS.asm  apply_status_from_ow_HG_SS.asm  dynamic_encounters_and_weather_HG_SS.asm
patches/HG_SS/Code Injection (needs arm9 expansion)/: ButtonScript_HG_SS.asm  EVIV_HG_SS.asm  apply_status_from_ow_HG_SS.asm  chain_candy_HG_SS.asm  dynamic_encounters_and_weather_HG_SS.asm  edge_xp_HG_SS.asm
patches/HG_SS/Simple Patches/: remove_EVs_HG_SS.asm  time_of_day_evos_HG_SS.asm
patches/PLAT/: ButtonScript_PLAT.asm  EVIV_PLAT.asm  apply_status_from_ow_PLAT.asm  dynamic_encounters_and_weather_PLAT.asm  force_shiny_PLAT.asm  levelcaps_PLAT.asm  no_items_PLAT.asm  use_item_fix_PLAT.asm
patches/PLAT/Code Injection (needs arm9 expansion)/: ButtonScript_PLAT.asm  EVIV_PLAT.asm  apply_status_from_ow_PLAT.asm  chain_candy_PLAT.asm  dynamic_encounters_and_weather_PLAT.asm  edge_xp_PLAT.asm  force_shiny_PLAT.asm  levelcaps_PLAT.asm  no_items_PLAT.asm  use_item_fix_PLAT.asm
patches/PLAT/Simple Patches/: remove_EVs_PLAT.asm  time_of_day_evos_PLAT.asm
src/: constants.rs  main.rs  synthoverlay_utils.rs  usage_checks.rs
wix/: main.wxs
